@startuml
class UserManagementActivity {
- FirebaseAuth auth
- FirebaseUser user
- DatabaseReference userRef
- TextView userNameTextView
- TextView userEmailTextView
- Button editProfileButton
- Button deleteAccountButton
}

class ExampleUnitTest {
}
class AddEventActivity {
- EditText typeEditText
- Button addEventButton
}

class Event {
- String type
- String date
- double price
- String time
- String sellerEmail
- String sellerPhone
- String searchField
}

class LoginActivity {
~ FirebaseAuth auth
~ GoogleSignInClient googleSignInClient
~ ShapeableImageView imageView
~ TextView nameTextView
~ FirebaseDatabase database
~ DatabaseReference usersRef
- ActivityResultLauncher<Intent> activityResultLauncher
}

class Photo {
- String imageUrl
}

class User {
+ String userId
+ String name
+ String mail
+ String profile
}

class ProfileActivity {
}
class PhotoUploadActivity {
- {static} int PICK_IMAGE_REQUEST
- ImageView imageView
- Button chooseImageButton
- Uri imageUri
}

class ExampleInstrumentedTest {
}
class MainActivity {
- EditText searchEditText
- Button searchButton
- LinearLayout resultTextView
}

class PhotoFeedActivity {
- RecyclerView photoRecyclerView
- PhotoAdapter photoAdapter
- List<Photo> photoList
- FloatingActionButton addPhotoFab
}

class PhotoAdapter {
- List<Photo> photoList
}

class PhotoAdapter$PhotoViewHolder {
~ ImageView photoImageView
}



AppCompatActivity <|-- UserManagementActivity
AppCompatActivity <|-- AddEventActivity
AppCompatActivity <|-- LoginActivity
AppCompatActivity <|-- ProfileActivity
AppCompatActivity <|-- PhotoUploadActivity
AppCompatActivity <|-- MainActivity
AppCompatActivity <|-- PhotoFeedActivity
Adapter <|-- PhotoAdapter
PhotoAdapter +.. PhotoAdapter$PhotoViewHolder
ViewHolder <|-- PhotoAdapter$PhotoViewHolder
@enduml